# Rag-Course

./: README.md  chat.py  document_loader.py  embedding_deep.py  embeddings.py  list_models.py  main.py  pdfLoader.py  pyproject.toml  ragPipeline.py  text_splitters.py  vector_score.py  vectordb.py
advance_rag/: advance_rag.py  advance_rag_2.py  monitering.py  ragPipeline.py
hybrid_search/: cost_optimization.py  prod_hybrid_search.py
langsmith/: langsmith_setup.py
prod_redy/: smart_chunking.py
super_base/: 01_superbase_connection.py  03_production_rag.py
