[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25>=0.3.9",
    "chromadb>=1.5.9",
    "google-genai>=2.9.0",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "semantic-text-splitter>=0.32.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
